--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="enter_text">Enter text</string>
     <string name="generate">Generate</string>
     <string name="menu_item_save">Save</string>
+    <string name="menu_item_share">Share</string>
 </resources>
